# serial-scale-hx711

./: .bumpversion.cfg  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.forgejo/workflows/: ci.yml  docs.yml  release.yml
.githooks/: fix_commit_msg.py
.github/: CODEOWNERS
.github/workflows/: CI.yaml  bump.yaml  ci.yml  docs.yml  install_and_test.yaml  pr-review.yml  release.yml
docs/: api.md  getting_started.md  hardware.md  index.md  usage.md
scale_firmware/: scale_firmware.ino
search/: search_index.json
serial_scale_hx711/: __init__.py  connection.py
src/serial_scale_hx711/: __init__.py  connection.py  scale.py
tests/: minimal_usage.py
tests/tests/test_integration/: test_placeholder.py
tests/tests/test_unit/: test_unit.py
