[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "serial-scale-hx711"
dynamic = ["version"]
description = "Python driver for Arduino+HX711 serial weighing scales."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [
    { name = "Lars B. Rollik", email = "L.B.Rollik@protonmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "pyserial",
]

[project.urls]
Repository = "https://github.com/larsrollik/serial-scale-hx711"
"Issue Tracker" = "https://github.com/larsrollik/serial-scale-hx711/issues"

[project.optional-dependencies]
dev = [
    "commitizen",
    "pytest",
    "pytest-cov",
    "pre-commit",
]

# ---------------------------------------------------------------------------
# Build
# ---------------------------------------------------------------------------

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["serial_scale_hx711"]

[tool.hatch.build.targets.sdist]
include = ["/serial_scale_hx711", "/tests", "/README.md", "/LICENSE", "/pyproject.toml"]

# ---------------------------------------------------------------------------
# Commitizen
# ---------------------------------------------------------------------------

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "scm"
tag_format = "v$version"
update_changelog_on_bump = false
tag_only = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=serial_scale_hx711 --durations=0"

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------

[tool.mypy]
ignore_missing_imports = true
