[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "serial-scale-hx711"
dynamic = ["version"]
description = "Python driver for Arduino+HX711 serial weighing scales."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [
    { name = "Lars B. Rollik", email = "L.B.Rollik@protonmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "pyserial",
]

[project.urls]
Homepage = "https://github.com/MurineShiftWork/serial-scale-hx711"
Documentation = "https://larsrollik.github.io/serial-scale-hx711/"
"Issue Tracker" = "https://github.com/MurineShiftWork/serial-scale-hx711/issues"

[project.optional-dependencies]
dev = [
    "commitizen",
    "pytest",
    "pytest-cov",
    "pre-commit",
]
docs = [
    "mkdocs-material",
]

# ---------------------------------------------------------------------------
# Build
# ---------------------------------------------------------------------------

[tool.hatch.version]
source = "vcs"
fallback-version = "2.0.4"

[tool.hatch.build.hooks.vcs]
version-file = "src/serial_scale_hx711/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/serial_scale_hx711"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/serial_scale_hx711",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
    "/CITATION.cff",
    "/VERSION",
]

# ---------------------------------------------------------------------------
# Commitizen
# ---------------------------------------------------------------------------

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "commitizen"
version = "2.1.1"
tag_format = "v$version"
update_changelog_on_bump = false
version_files = ["VERSION"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=serial_scale_hx711 --durations=0"

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------

[tool.mypy]
mypy_path = "src"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "toml"
ignore_missing_imports = true
